--- a/src/public/css/mainview.css
+++ b/src/public/css/mainview.css
@@ -3,10 +3,14 @@ body
     background-color: #f5f5f5;
     font-family: "Apple SD Gothic Neo", 나눔고딕, 'Nanum Gothic', NanumGothic, "Noto Sans CJK KR", "Noto Sans KR", "Noto Sans", 맑은고딕, "Malgun Gothic", arial, sans-serif;
 }
-.article-wrapper
+.articleRCWrapper
 {
     margin-top: 75px;
     margin-bottom: 50px;
+    gap: 20px;
+}
+.article-wrapper
+{
     background-color: white;
 }
 @media (max-width: 1200px)
