--- a/src/views/threads/threadlist.ejs
+++ b/src/views/threads/threadlist.ejs
@@ -12,7 +12,7 @@
     <% }) %>
 </ul>
 <hr>
-<h3>Start a new discussion</h3>
+<h3>새로운 토론 개설</h3>
 <form href='/threads/<%= pagename %>' method = 'POST'>
     <div class="form-group mt-2 mb-2 row">
         <label for='title' class='col-sm-2 col-form-label'>Title</label>
