--- a/src/board/views/boardHome.ejs
+++ b/src/board/views/boardHome.ejs
@@ -1,3 +1,7 @@
+<div class='boardRecentVisit mb-2 p-2'>
+    <div class='fw-bold' style='min-width: 4rem;'>최근 방문</div>
+    <ul id='boardVisitList'></ul>
+</div>
 <% for (let i = 0; i < boardMatome.length - 1; i += 2) { %>
     <div class='row'>
         <%- boardMatome[i] %>
