--- a/src/board/views/list.ejs
+++ b/src/board/views/list.ejs
@@ -1,4 +1,8 @@
 <link rel='stylesheet' href='/css/boardList.css'>
+<div class='boardRecentVisit mb-2 p-2'>
+    <div class='fw-bold' style='min-width: 4rem;'>최근 방문</div>
+    <ul id='boardVisitList'></ul>
+</div>
 <div class='articleListTop mb-2 d-flex flex-row-reverse'>
     <a class='btn btn-primary articleBtnWrite' href='/board/write/<%= boardName %>' role='button'>글쓰기</a>
     <div style='display: flex; flex-grow: 1'>
