--- a/src/board/views/write.ejs
+++ b/src/board/views/write.ejs
@@ -1,6 +1,10 @@
 <link rel='stylesheet' href='/css/edit.css'>
 <script src='/lib/ckeditor5/build/ckeditor.js'></script>
 <script src='/js/boardWrite.js'></script>
+<div class='boardRecentVisit mb-2 p-2'>
+    <div class='fw-bold' style='min-width: 4rem;'>최근 방문</div>
+    <ul id='boardVisitList'></ul>
+</div>
 <form action='/board/write/<%= board %>' method='POST' class='editForm'>
     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <input type='hidden' id='bBoard' name='board' value='<%= board %>'>
