--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -38,5 +38,6 @@
 <script src='/js/scroll.js'></script>
 <script src='/js/postrender.js'></script>
 <script src='/js/sato.js'></script>
+<script src='/js/board.js'></script>
 <script src='/js/iealert.js'></script>
 <title><%= title %> - <%= global.appname %></title>
