--- a/src/public/css/mainview.css
+++ b/src/public/css/mainview.css
@@ -63,7 +63,10 @@ body
     overflow-x: hidden;
     overflow-y: hidden;
 }
-
+.navbar
+{
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
 .nav-icon
 {
     margin-right: 5px;
