--- a/src/views/nav.ejs
+++ b/src/views/nav.ejs
@@ -26,7 +26,7 @@
             </li>
             <!-- toolbox -->
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" href="#" id="navbarTools" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarTools" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="fas fa-cog"></i>
                     <span class='d-none d-lg-inline'>도구</span>
                 </a>
