--- a/src/views/pages/recentchanges.html
+++ b/src/views/pages/recentchanges.html
@@ -10,7 +10,7 @@
     </ul>
 </div>
 <div style='clear:both'></div>
-<div style='overflow-x: auto'>
+<div style='overflow-x: auto; min-height: 100vh;'>
     <table class="table" style='min-width: 380px;'>
         <thead>
             <colgroup>
