--- a/src/board/views/boardHome.ejs
+++ b/src/board/views/boardHome.ejs
@@ -1,4 +1,4 @@
-<div class='boardRecentVisit mb-2 p-2'>
+<div class='boardRecentVisit bg-light mb-2 p-2'>
     <div class='fw-bold' style='min-width: 4rem;'>최근 방문</div>
     <ul id='boardVisitList'></ul>
 </div>
