--- a/src/public/css/dark.css
+++ b/src/public/css/dark.css
@@ -29,6 +29,10 @@ body
 {
     background-color:  var(--dark-nav) !important;
 }
+.bg-white
+{
+    background-color: var(--dark-nav) !important;
+}
 .ui-autocomplete
 {
     background-color: var(--dark-nav) !important;
@@ -162,4 +166,9 @@ textarea, input[type=text], input[type=number], input[type=password]
     background-color: var(--dark-nav) !important;
     color: var(--dark-foreground) !important;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23cfcfcf' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+}
+
+.articleInfo:hover, .articleInfo_current, .articleInfo_gongji
+{
+    background-color: var(--dark-nav) !important;
 }
