--- a/src/board/views/list.ejs
+++ b/src/board/views/list.ejs
@@ -1,5 +1,5 @@
 <link rel='stylesheet' href='/css/boardList.css'>
-<div class='boardRecentVisit mb-2 p-2'>
+<div class='boardRecentVisit bg-light mb-2 p-2'>
     <div class='fw-bold' style='min-width: 4rem;'>최근 방문</div>
     <ul id='boardVisitList'></ul>
 </div>
