--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -30,6 +30,7 @@
 <link rel='stylesheet' href='/css/rcsidebar.css'>
 <link rel='stylesheet' href='/css/floatingToolbox.css'>
 <link rel='stylesheet' href='/css/board.css'>
+<script src='/js/readTheme.js'></script>
 <script src='/js/replacedate.js'></script>
 <script src='/js/toolbar.js'></script>
 <script src='/js/identicon.js'></script>
