--- a/src/views/files/upload.ejs
+++ b/src/views/files/upload.ejs
@@ -23,7 +23,7 @@
         </figure>
     </div> 
     <p><span class='text-danger fw-bold'>경고!</span>    저작권이 있는 내용을 함부로 저장하지 마십시오. 법적 책임이 뒤따를 수 있습니다. 라이선스(CCL, 제한적 이용 등) 표기는 필수입니다.<br><%= global.copyrightNotice %></p>
-    <p>JPEG, JPG, PNG, GIF, WebP만 업로드할 수 있습니다.</p>
+    <p>JPEG, JPG, PNG, GIF, WebP, SVG만 업로드할 수 있습니다.</p>
     <button type='submit' id='uploadButton' class='btn btn-primary' disabled>Upload</button>
 </form>
 
