--- a/src/views/user/settings.ejs
+++ b/src/views/user/settings.ejs
@@ -1,7 +1,7 @@
 <div class="card mb-3">
     <div class="card-body">
         <h5 class="card-title">테마</h5>
-        <p class="card-text">라이트 테마 및 다크 테마 중 사용할 테마를 선택할 수 있습니다.</p>
+        <p class="card-text">다크 모드 사용 여부를 설정할 수 있습니다.</p>
         <input type='hidden' name='_csrf' value='<%= csrfToken %>'>
         <div class='form-group mb-2'>
             <div class='row'>
@@ -28,6 +28,7 @@
         <button class='btn btn-primary' onClick='setThemePref()'>Save</button>
     </div>
 </div>
+<% if (username) { %>
 <div class="card mb-3">
     <div class="card-body">
         <h5 class="card-title">비밀번호 변경</h5>
@@ -60,4 +61,5 @@
         </form>
     </div>
 </div>
+<% } %>
 <script src='/js/settings.js'></script>
