--- a/src/board/views/write.ejs
+++ b/src/board/views/write.ejs
@@ -24,7 +24,7 @@
         <div class='captcha'><%- captcha %></div>
     </div>
     <% if (locals.username === undefined) { %>
-    <p><span class='text-danger fw-bold'>WARNING!</span>    비로그인 상태로 글을 작성하면 IP가 일부 공개될 수 있습니다.</p>
+    <p><span class='text-danger fw-bold'>경고!</span>    비로그인 상태로 글을 작성하면 IP가 일부 공개될 수 있습니다.</p>
     <% } %>
     <button type='submit' type='button' class='btn btn-primary mt-3'>작성</button>
 </form>
