검색 기능 수정

--- a/src/board/views/list.ejs
+++ b/src/board/views/list.ejs
@@ -29,7 +29,7 @@
                         </div>
                         <div class='articleTitle p-2'>
                             <div class='articleTitleText'>
-                                <span class='articleLink' title='<%= p.title %>' href='/board/read/<%= p.boardID %>?no=<%= p.idAtBoard %>'>
+                                <span class='articleLink' title='<%= p.title %>'>
                                     <%= p.title %>
                                 </span>
                             </div>
@@ -77,7 +77,7 @@
                     </div>
                     <div class='articleTitle p-2'>
                         <div class='articleTitleText'>
-                            <span class='articleLink' title='<%= p.title %>' href='/board/read/<%= p.boardID %>?no=<%= p.idAtBoard %>'>
+                            <span class='articleLink' title='<%= p.title %>'>
                                 <%= p.title %>
                             </span>
                         </div>
