--- a/src/views/pages/search.ejs
+++ b/src/views/pages/search.ejs
@@ -51,7 +51,7 @@
         </li>
     <% } %>
 </ul>
-<% if (resultContent.length == 0) { %>
+<% if (posts.length == 0) { %>
     <p>결과 없음</p>
 <% } %>
 <br>
