--- a/src/views/outline.ejs
+++ b/src/views/outline.ejs
@@ -12,7 +12,7 @@
                     <%- include('IEalert') %>
                     
                     <div class="alert alert-info" role="alert">
-                        <b>★</b> 첫사랑썰, 전애인썰, 공포썰, 감동썰, 미처 말하지 못했던 썰들까지 익명으로 풀어낼 수 있는 기회! GEC 썰 풀기 대회가 개최 중입니다!<b>★</b> <br><a href="'https://gecwiki.kr/board/read/free?no=5'">여기를 눌러 대회 정보 확인.</a>
+                        <b>★</b> 첫사랑썰, 전애인썰, 공포썰, 감동썰, 미처 말하지 못했던 썰들까지 익명으로 풀어낼 수 있는 기회! GEC 썰 풀기 대회가 개최 중입니다!<b>★</b> <br><a href="https://gecwiki.kr/board/read/free?no=5">여기를 눌러 대회 정보 확인.</a>
                     </div>
                     
                     <div class='alert alert-info' id='satobox' style='display: none' role="alert">
