--- a/src/board/views/boardHome.ejs
+++ b/src/board/views/boardHome.ejs
@@ -3,7 +3,7 @@
     <ul id='boardVisitList'></ul>
 </div>
 <% for (let i = 0; i < boardMatome.length - 1; i += 2) { %>
-    <div class='row'>
+    <div class='row' style='margin-bottom: 1em;'>
         <%- boardMatome[i] %>
         <%- boardMatome[i+1] %>
     </div>
