--- a/src/views/pages/edit.ejs
+++ b/src/views/pages/edit.ejs
@@ -22,7 +22,7 @@
                 </button>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/Upload" target='_blank'>파일 업로드</a></li>
-                  <li><a class="dropdown-item" href="javacsript:editMacro(`[file(`,`filename.jpg`,`)]`)">파일 삽입</a></li>
+                  <li><a class="dropdown-item" href="javacscript:editMacro(`[file(`,`filename.jpg`,`)]`)">파일 삽입</a></li>
                 </ul>
             </div>
             <div class="dropdown editMacro-drp">
