--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -22,7 +22,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=<%= global.conf.mapKey %>"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2N5CWGKWP6"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=<<gtag>>"></script>
 <script async src='/js/gtag.js'></script>
 <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/nanumgothic.css">
 <link rel='stylesheet' href='/css/mainview.css'>
