--- a/src/public/css/boardList.css
+++ b/src/public/css/boardList.css
@@ -151,8 +151,8 @@
 }
 .page-item.active > .page-link
 {
-    background-color: #7aa7d6 !important;
-    border-color: #7aa7d6 !important;
+    background-color: #43739F !important;
+    border-color: #43739F !important;
 }
 .pagination
 {
