--- a/src/public/css/ren.css
+++ b/src/public/css/ren.css
@@ -83,7 +83,7 @@ p:empty
     display: table;
     width: auto;
     border: 1px solid #dee2e6;
-    border-left: 5px solid #7aa7d6 !important;
+    border-left: 5px solid #43739F !important;
     /*padding-left: 16px;
     padding-right: 16px;*/
     background-color: #f5f5f5;
