--- a/src/views/files/upload.ejs
+++ b/src/views/files/upload.ejs
@@ -13,7 +13,7 @@
         <textarea class='form-control' id='editAreaBox' name='explanation' placeholder='라이센스 정보, 출처 등을 기입해 주세요.' ></textarea>
     </div>   
     <div class='form-group mb-2'>
-        <label for='inputFile' class='form-label'>파일 선택 (최대 4MB)</label>
+        <label for='inputFile' class='form-label'>파일 선택 (최대 <%= fileLimit %>MB)</label>
         <input class='form-control' type='file' name='inputFile' id='inputFile'>
     </div>
     <div class='form-group mb-2'>
@@ -23,7 +23,7 @@
         </figure>
     </div> 
     <p><span class='text-danger fw-bold'>경고!</span>    저작권이 있는 내용을 함부로 저장하지 마십시오. 법적 책임이 뒤따를 수 있습니다. 라이선스(CCL, 제한적 이용 등) 표기는 필수입니다.<br><%= global.copyrightNotice %></p>
-    <p>JPEG, JPG, PNG, GIF, WebP, SVG만 업로드할 수 있습니다.</p>
+    <p><%= filetypes %>만 업로드할 수 있습니다.</p>
     <button type='submit' id='uploadButton' class='btn btn-primary' disabled>Upload</button>
 </form>
 
