--- a/src/views/files/viewfile.ejs
+++ b/src/views/files/viewfile.ejs
@@ -1,3 +1,4 @@
+<!-- LEGACY: This file is no longer used. -->
 <img class='m-3 img-fluid' src='/uploads/<%= filename %>'>
 <table class='table m-3'>
     <tbody>
