--- a/src/views/outline.ejs
+++ b/src/views/outline.ejs
@@ -14,7 +14,7 @@
                     <div class='alert alert-info' id='satobox' style='display: none' role="alert">
                         <a id='satoboxlink'>사용자 토론</a>이 열려 있습니다.
                     </div>
-                    <div class='pb-2 mt-2 mb-3 border-bottom titleArea'>
+                    <div class='pb-2 mt-2 mb-3 titleArea'>
                         <h1 class='pgTitle'><% if (locals.titleLink) { %><a class='pgTitleLink' href='<%= locals.titleLink %>'><% } %><%= title %><% if (locals.titleLink) { %></a><% } %><% if (locals.titleInfo) { %><h5 style='display: inline;margin-left:10px;'><%- locals.titleInfo %></h5><% } %></h1>
                         <% if (locals.isPage) { %>
                             <%- include('pageTools') %>
