--- a/src/public/css/board.css
+++ b/src/public/css/board.css
@@ -72,7 +72,7 @@ img
 }
 .gechu:hover, .bichu:hover
 {
-    border-color: #7aa7d6;
+    border-color: #43739F;
     cursor: pointer;
 }
 .gechuIcon, .bichuIcon
@@ -168,7 +168,7 @@ img
 .boardHomeBoardName
 {
     display: inline-block;
-    border-bottom: 3px solid #7aa7d6;
+    border-bottom: 3px solid #43739F;
     padding-bottom: 0.25rem;
     flex-shrink: 0;
     margin-bottom: 0;
@@ -215,7 +215,7 @@ img
     min-width: 22px;
     /*font-size: 11px;*/
     line-height: 14px;
-    background-color: #007bff; /* #7aa7d6 */
+    background-color: #007bff; /* #43739F */
     color: white;
     padding: 1px 6px;
     text-align: center;
