--- a/src/public/css/mainview.css
+++ b/src/public/css/mainview.css
@@ -69,7 +69,7 @@ body
 }
 .navbar
 {
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    /*box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);*/
 }
 .nav-icon
 {
@@ -167,22 +167,26 @@ body
 
 .bg-primary, .btn-primary
 {
-    background-color: #7aa7d6 !important;
+    background-color: #43739F !important;
+}
+.btn-secondary
+{
+    background-color: #3C4856 !important;
 }
 .btn-outline-primary
 {
-    border-color: #7aa7d6 !important;
-    color: #7aa7d6 !important;
+    border-color: #43739F !important;
+    color: #000000 !important;
 }
 .btn-outline-primary:hover, .btn-primary, .btn-outline-primary.dropdown-toggle.show
 {
-    background-color: #7aa7d6 !important;
-    border-color: #7aa7d6 !important;
+    background-color: #43739F !important;
+    border-color: #43739F !important;
     color: white !important;
 }
 .dropdown-item.active, .dropdown-item:active
 {
-    background-color: #7aa7d6 !important;
+    background-color: #43739F !important;
 }
 
 .blackln
@@ -192,4 +196,16 @@ body
 .page-link
 {
     font-family: sans-serif;
+}
+
+.btn-slideopen
+{
+    transition: ease-out 0.2s;
+    box-shadow: inset 0 0 0 0 #43739F;
+    border: 1px solid #43739F;
+}
+.btn-slideopen:hover
+{
+    box-shadow: inset 55px 0 0 0 #43739F;
+    color: white
 }
