--- a/src/views/pages/edit.ejs
+++ b/src/views/pages/edit.ejs
@@ -12,34 +12,34 @@
     <textarea name='editSuffix' style='display:none'><%= suffix %></textarea>
     <div class='form-group'>
         <div class='mb-2'>
-            <div class='editMacro bg-light' onclick="editMacro(`'''`,`볼드`,`'''`)"><i class="fas fa-bold"></i></div>
-            <div class='editMacro bg-light' onclick="editMacro(`''`,`기울임`,`''`)"><i class="fas fa-italic"></i></div>
-            <div class='editMacro bg-light' onclick="editMacro(`__`,`밑줄`,`__`)"><i class="fas fa-underline"></i></div>
-            <div class='editMacro bg-light' onclick="editMacro(`--`,`취소선`,`--`)"><i class="fas fa-strikethrough"></i></div>
+            <div class='editMacro bg-light border' onclick="editMacro(`'''`,`볼드`,`'''`)"><i class="fas fa-bold"></i></div>
+            <div class='editMacro bg-light border ' onclick="editMacro(`''`,`기울임`,`''`)"><i class="fas fa-italic"></i></div>
+            <div class='editMacro bg-light border' onclick="editMacro(`__`,`밑줄`,`__`)"><i class="fas fa-underline"></i></div>
+            <div class='editMacro bg-light border' onclick="editMacro(`--`,`취소선`,`--`)"><i class="fas fa-strikethrough"></i></div>
             <div class="dropdown editMacro-drp">
-                <button class='editMacro-drp bg-light dropdown-toggle' type="button" id='drpFile' data-bs-toggle="dropdown" aria-expanded="false" style="border: none">
+                <button class='editMacro-drp bg-light border dropdown-toggle' type="button" id='drpFile' data-bs-toggle="dropdown" aria-expanded="false" style="border: none">
                     <i class="fas fa-image"></i>
                 </button>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/Upload" target='_blank'>파일 업로드</a></li>
-                  <li><a class="dropdown-item" href="javascript:editMacro(`[file(`,`filename.jpg`,`)]`)">파일 삽입</a></li>
+                    <li><a class="dropdown-item" href="/Upload" target='_blank'>파일 업로드</a></li>
+                    <li><a class="dropdown-item" href="javascript:editMacro(`[file(`,`filename.jpg`,`)]`)">파일 삽입</a></li>
                 </ul>
             </div>
             <div class="dropdown editMacro-drp">
-                <button class='editMacro-drp bg-light dropdown-toggle' type="button" id='drpHeader' data-bs-toggle="dropdown" aria-expanded="false" style="border: none">
+                <button class='editMacro-drp bg-light border dropdown-toggle' type="button" id='drpHeader' data-bs-toggle="dropdown" aria-expanded="false" style="border: none">
                     <i class="fas fa-heading"></i>
                 </button>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="javascript:editMacro(``,``,`[toc]`)">목차</a></li>
-                  <li><a class="dropdown-item" href="javascript:editMacro(`\n= `,`내용`,` =\n`)">1단계</a></li>
-                  <li><a class="dropdown-item" href="javascript:editMacro(`\n== `,`내용`,` ==\n`)">2단계</a></li>
-                  <li><a class="dropdown-item" href="javascript:editMacro(`\n=== `,`내용`,` ===\n`)">3단계</a></li>
-                  <li><a class="dropdown-item" href="javascript:editMacro(`\n==== `,`내용`,` ====\n`)">4단계</a></li>
-                  <li><a class="dropdown-item" href="javascript:editMacro(`\n===== `,`내용`,` =====\n`)">5단계</a></li>
-                  <li><a class="dropdown-item" href="javascript:editMacro(`\n====== `,`내용`,` ======\n`)">6단계</a></li>
+                    <li><a class="dropdown-item" href="javascript:editMacro(``,``,`[toc]`)">목차</a></li>
+                    <li><a class="dropdown-item" href="javascript:editMacro(`\n= `,`내용`,` =\n`)">1단계</a></li>
+                    <li><a class="dropdown-item" href="javascript:editMacro(`\n== `,`내용`,` ==\n`)">2단계</a></li>
+                    <li><a class="dropdown-item" href="javascript:editMacro(`\n=== `,`내용`,` ===\n`)">3단계</a></li>
+                    <li><a class="dropdown-item" href="javascript:editMacro(`\n==== `,`내용`,` ====\n`)">4단계</a></li>
+                    <li><a class="dropdown-item" href="javascript:editMacro(`\n===== `,`내용`,` =====\n`)">5단계</a></li>
+                    <li><a class="dropdown-item" href="javascript:editMacro(`\n====== `,`내용`,` ======\n`)">6단계</a></li>
                 </ul>
             </div>
-            <div class='editMacro bg-light' onclick="window.open('/w/HelpOnEditing','_blank')"><i class="fas fa-question-circle"></i></div>
+            <div class='editMacro bg-light border' onclick="window.open('/w/HelpOnEditing','_blank')"><i class="fas fa-question-circle"></i></div>
         </div>
         <textarea class='form-control' id='editAreaBox' name='content' placeholder='Describe <%= title %> here...' <% if (locals.disabled) { %> disabled <% } %>><%= content %></textarea>
     </div>
