--- a/src/views/rc.ejs
+++ b/src/views/rc.ejs
@@ -1,14 +1,14 @@
 <div id='rcsidebar'>
     <div class='border rounded'>
         <div class='p-2 border-bottom bg-white'>
-            <a href='/RecentChanges'><span class='fw-bold rcTitle'>최근 변경</span> <i class="fas fa-external-link-square-alt ren-extlink-icon"></i></a>
+            <a href='/RecentChanges'><span class='fw-bold rcTitle'>최근 변경</span></a>
         </div>
         <ul class="list-group list-group-flush" id='rcsidebarcontents'>
         </ul>
     </div>
     <div class='border rounded' style='margin-top: 1rem;'>
         <div class='p-2 border-bottom bg-white'>
-            <a href='/board'><span class='fw-bold rcTitle'>게시판 새 글</span> <i class="fas fa-external-link-square-alt ren-extlink-icon"></i></a>
+            <a href='/board'><span class='fw-bold rcTitle'>게시판 새 글</span></a>
         </div>
         <ul class="list-group list-group-flush" id='rcsidebarposts'>
         </ul>
