--- a/src/views/user/settings.ejs
+++ b/src/views/user/settings.ejs
@@ -1,3 +1,4 @@
+<% if (global.conf.disableDarkMode !== true) { %>
 <div class="card mb-3">
     <div class="card-body">
         <h5 class="card-title">테마</h5>
@@ -25,9 +26,35 @@
                 </div>
             </div>
         </div>
-        <button class='btn btn-primary' onClick='setThemePref()'>Save</button>
+        <button class='btn btn-primary' onClick='setThemePref()'>저장</button>
     </div>
 </div>
+<% } %>
+<div class="card mb-3">
+    <div class="card-body">
+        <h5 class="card-title">최근 변경 사이드바 사용</h5>
+        <p class="card-text">최근 변경 사이드바 사용 여부를 설정할 수 있습니다.</p>
+        <input type='hidden' name='_csrf' value='<%= csrfToken %>'>
+        <div class='form-group mb-2'>
+            <div class='row'>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="radioRC" id="radioRCtrue" value='true'>
+                    <label class="form-check-label" for="radioRCtrue">
+                        사용
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="radioRC" id="radioRCfalse" value='false'>
+                    <label class="form-check-label" for="radioRCfalse">
+                        사용하지 않음
+                    </label>
+                </div>
+            </div>
+        </div>
+        <button class='btn btn-primary' onClick='setRCPref()'>저장</button>
+    </div>
+</div>
+
 <% if (username) { %>
 <div class="card mb-3">
     <div class="card-body">
